--- a/ERP/Web.config
+++ b/ERP/Web.config
@@ -12,6 +12,7 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ERP-20161128115930.mdf;Initial Catalog=aspnet-ERP-20161128115930;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="TallerMecanicoEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HONK\SQLEXPRESS;initial catalog=TallerMecanico;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="erpEntities" connectionString="metadata=res://*/Models.ErpModel.csdl|res://*/Models.ErpModel.ssdl|res://*/Models.ErpModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;convert zero datetime=True;database=erp&quot;" providerName="System.Data.EntityClient" />
+    <add name="sqlEntities" connectionString="metadata=res://*/Models.sqlModel.csdl|res://*/Models.sqlModel.ssdl|res://*/Models.sqlModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SOBREMESA\SQLEXPRESS;initial catalog=Erp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
