--- a/ERP/ERP.csproj
+++ b/ERP/ERP.csproj
@@ -206,9 +206,6 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\clientes.cs">
-      <DependentUpon>ErpModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\ErpModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -224,8 +221,68 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ErpModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\erp_categorias.cs">
+      <DependentUpon>sqlModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\erp_clientes.cs">
+      <DependentUpon>sqlModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\erp_departamentos.cs">
+      <DependentUpon>sqlModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\erp_funciones.cs">
+      <DependentUpon>sqlModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\erp_funciones_permisos.cs">
+      <DependentUpon>sqlModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\erp_grupos.cs">
+      <DependentUpon>sqlModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\erp_modulos.cs">
+      <DependentUpon>sqlModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\erp_modulos_permisos.cs">
+      <DependentUpon>sqlModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\erp_ofertas.cs">
+      <DependentUpon>sqlModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\erp_pedidos.cs">
+      <DependentUpon>sqlModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\erp_pedidos_item.cs">
+      <DependentUpon>sqlModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\erp_productos.cs">
+      <DependentUpon>sqlModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\erp_productos_categorias.cs">
+      <DependentUpon>sqlModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\erp_productos_ofertas.cs">
+      <DependentUpon>sqlModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\erp_usuarios.cs">
+      <DependentUpon>sqlModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\sqlModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>sqlModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sqlModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>sqlModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sqlModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>sqlModel.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="taller_cliente.cs">
@@ -238,6 +295,9 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\css\font-awesome.css" />
+    <Content Include="Content\css\font-awesome.min.css" />
+    <Content Include="Content\fonts\fontawesome-webfont.svg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -262,6 +322,16 @@
       <DependentUpon>ErpModel.edmx</DependentUpon>
       <LastGenOutput>ErpModel.cs</LastGenOutput>
     </Content>
+    <Content Include="Models\sqlModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>sqlModel.edmx</DependentUpon>
+      <LastGenOutput>sqlModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\sqlModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>sqlModel.edmx</DependentUpon>
+      <LastGenOutput>sqlModel.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <EntityDeploy Include="Model1.edmx">
@@ -278,10 +348,22 @@
     <Content Include="Models\ErpModel.edmx.diagram">
       <DependentUpon>ErpModel.edmx</DependentUpon>
     </Content>
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
+    <EntityDeploy Include="Models\sqlModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>sqlModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\sqlModel.edmx.diagram">
+      <DependentUpon>sqlModel.edmx</DependentUpon>
+    </Content>
+    <Content Include="Content\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Content\fonts\FontAwesome.otf" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
-    <Content Include="Scripts\jquery-1.10.2.js" />
-    <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery-2.2.4.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -339,7 +421,6 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
-    <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
